--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+alembic==1.13.3
 asgiref==3.8.1
 attr==0.3.2
 colorama==0.4.6
@@ -23,6 +24,7 @@ pyOpenSSL==24.2.1
 python-dotenv==1.0.1
 redis==5.1.1
 Sphinx==8.1.3
+SQLAlchemy==2.0.35
 thread==2.0.5
 urllib3_secure_extra==0.1.0
 watchdog==5.0.3
