--- a/requirements.txt
+++ b/requirements.txt
@@ -1,32 +1,8 @@
 alembic==1.13.3
-asgiref==3.8.1
-attr==0.3.2
-colorama==0.4.6
-ConfigParser==7.1.0
-cryptography==43.0.1
-Cython==3.0.11
-dl==0.1.0
-docutils==0.21.2
-filelock==3.16.1
+Flask==3.0.3
 Flask_Login==0.6.3
 Flask_Migrate==4.0.4
 flask_sqlalchemy==3.1.1
-HTMLParser==0.0.2
-ipython==8.12.3
-ipywidgets==8.1.5
-jnius==1.1.0
-keyring==25.4.1
-numpy==2.1.2
-ordereddict==1.1
-Pillow==11.0.0
-protobuf==5.28.2
-pyOpenSSL==24.2.1
-python-dotenv==1.0.1
-redis==5.1.1
-Sphinx==8.1.3
 SQLAlchemy==2.0.35
-thread==2.0.5
-urllib3_secure_extra==0.1.0
-watchdog==5.0.3
-wincertstore==0.2.1
-xmlrpclib==1.0.1
+Werkzeug==3.0.4
+gunicorn
