--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,8 @@ alembic==1.13.3
 Flask==3.0.3
 Flask_Login==0.6.3
 Flask_Migrate==4.0.4
-Flask_sqlalchemy==3.1.1
+flask_sqlalchemy==3.1.1
 SQLAlchemy==2.0.35
 Werkzeug==3.0.4
-gunicorn
+Gunicorn
+psycopg2-binary
