--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-DATABASE_URL=postgresql://event_manager_user:KyotanabePickle@db/event_manager
+DATABASE_URL=postgresql://event_manager_user:tbc1LEzQW9HzLmP6k6aejqliIyjQEROw@dpg-csbib5dds78s73b80iu0-a.frankfurt-postgres.render.com/event_manager_kbm4
 SECRET_KEY=your_very_secret_key_here
 DB_USER=event_manager_user
 DB_PASSWORD=KyotanabePickle
